# offline-jenkins-downloader

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
config/: settings.py  urls.py
vscode_downloader/: apps.py  models.py  urls.py  views.py
vscode_downloader/migrations/: 0001_initial.py
vscode_downloader/templates/vscode_downloader/: browse_extensions.html  extension_details.html  landing.html  main.html
vscode_downloader/templatetags/: json_filters.py
