[tool.poetry]
name = "vscode-downloader"
version = "0.1.0"
description = ""
authors = ["Daniel Dyk <daniel.dyk87@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.4"
django = "^5.1.3"
semver = "^3.0.2"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
